sostituzione metodi deprecati